<resources>
    <string name="app_name">FinaQA</string>
    <string name="skip">SKIP</string>
    <string name="get_started">get started</string>
    <string name="str_consultant_login">Consultant Login</string>
    <string name="str_get_started">Get</string>
    <string name="str_customer_login">Customer</string>
    <string name="str_started">Started</string>
    <string name="str_login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment for query</string>
    <string name="str_query_answer">Questions and Answers</string>
    <string name="str_consulting_free_pay">Consulting free and paid</string>
    <string name="str_finance_advice">Financial Health Check</string>
    <string name="str_planning_expert">Expert meeting</string>
    <string name="str_about_us">Company information</string>
    <string name="str_contact_us">Contact us</string>
    <string name="str_profile">Profile</string>
    <string name="str_change_password">Change password</string>
    <string name="dialog_title">Feedback</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="finace_term"><![CDATA[complete solution of tax laws & insurance]]></string>
    <string name="more_text"><u>more..</u></string>
    <string name="dialog_title_reply">Reply</string>
    <string name="title_activity_contact_us">Contact us</string>
    <string name="title_activity_about_us">About us</string>
    <string name="str_first_name">Name</string>
    <string name="str_email_hint">Email</string>
    <string name="str_user_password">password</string>
    <string name="str_btn_save">save</string>
    <string name="myProfile">My profile</string>
    <string name="str_forgot_msg">Forgot your password?</string>
    <string name="str_btn_send_email">Reset password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="str_bank_name">Bank name</string>
    <string name="str_acc_no">Account no.</string>
    <string name="str_ifcs_code">IFSC code</string>
    <string name="bank_details_title">Bank details</string>
    <string name="history">History</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="Rs">\u20B9</string>
    <string name="assetsLabel">Health check</string>
    <string name="totalLoan">Health check report</string>
    <string name="adviceLabel">Health check continue</string>
    <string name="labelAdvie">Financial health check</string>
    <string name="payment_details">Payment</string>
    <string name="reject_under_line"><u>Reject</u></string>
    <string name="question_answer">Question and answer</string>
    <string name="timeHorzon">Time Horizon</string>
    <string name="longtermGoals">Long term goals</string>
    <string name="shortTermRisk">Short term Risk</string>
</resources>
