<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.finaqa.activities.LoginActivity">
    <!--<ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_screen_background" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/consultantLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:padding="8dp">

                <com.finaqa.customeview.AbelTextViewFont
                    android:id="@+id/txt_vender_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_consultant_login"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/drawer_background" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleViewImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_logog_512" />

                <com.finaqa.customeview.AbelTextViewFont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="6dp"
                    android:text="Money Matters"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/getStarted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.finaqa.customeview.AbelTextViewFont
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_get_started"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.finaqa.customeview.AbelTextViewFont
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_started"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="0.7dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/drawer_background" />

                <LinearLayout
                    android:id="@+id/customerLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.finaqa.customeview.AbelTextViewFont
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_customer_login"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.finaqa.customeview.AbelTextViewFont
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_login"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>


        </FrameLayout>
    </LinearLayout>
</RelativeLayout>
