<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.finaqa.customeview.RobotoRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/str_forgot_msg"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <com.finaqa.customeview.RobotoRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:padding="16dp"
                android:text="Enter your email id to receive your password"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/border_gray"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <EditText
                        android:id="@+id/vendor_edt_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="2dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/str_email_hint"
                        android:inputType="textEmailAddress"
                        android:paddingStart="8dp"
                        android:singleLine="true"
                        android:textColor="@android:color/secondary_text_light"
                        android:textColorHint="@android:color/secondary_text_light"
                        android:textSize="16sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="29dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/vendorForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0.5"
                        android:background="@color/colorPrimary"
                        android:text="@string/str_btn_send_email"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
